--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,3 +32,20 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
+    - name: create package
+      run: |
+        pyrcc5 resources.qrc resources.py
+        pyinstaller --onefile --windowed -i icons/blipblop_logo.icns --add_data="icons/blipblop_logo.png:." blipblop.py
+    
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        # Artifact name
+        name: blipblop-binary
+        # A file, directory or wildcard pattern that describes what to upload
+        path: |
+          dist
+        retention-days: 1
+    
+    
