--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
     
     - name: create package
       run: |
-        pyrcc5 resources.qrc
+        pyrcc5 resources.qrc -o resources.py
         pyinstaller --onefile --windowed -i icons/blipblop_logo.icns --add_data="icons/blipblop_logo.png:." --add_data="resources.py:." blipblop.py
     
     - name: Upload a Build Artifact
