--- a/.github/workflows/python-app_linux.yml
+++ b/.github/workflows/python-app_linux.yml
@@ -36,7 +36,7 @@ jobs:
     - name: create package
       run: |
         pyrcc5 resources.qrc -o resources.py
-        pyinstaller blipblop_linux.py
+        pyinstaller blipblop_linux.spec
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.2
