--- a/.github/workflows/python-app_win.yml
+++ b/.github/workflows/python-app_win.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-10.15
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -36,7 +36,7 @@ jobs:
     - name: create package
       run: |
         pyrcc5 resources.qrc -o resources.py
-        pyinstaller --onefile --windowed --name="BlipBlop" --osx-bundle-identifier="de.uni-tuebingen.neuroetho.blipblop" -i icons/blipblop_logo.icns --add-data="icons/blipblop_logo.icns:." --add-data="resources.py:." blipblop.py
+        pyinstaller --onefile --windowed --name="BlipBlop" blipblop_win.spec
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.2
