--- a/.github/workflows/python-app_win.yml
+++ b/.github/workflows/python-app_win.yml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/upload-artifact@v2.2.2
       with:
         # Artifact name
-        name: blipblop-windows
+        name: BlipBlop-windows
         # A file, directory or wildcard pattern that describes what to upload
         path: |
           dist
